# nc-teltonika-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build_linux.sh  clean.sh  nc-teltonika-server.logrotate  nc-teltonika-server.service
.claude/: settings.json
.github/workflows/: ci.yml  docker-build.yml
src/: config.rs  db.rs  main.rs  monitor.rs  notifications.rs  utils.rs  webhook.rs
src/parser/: codec8e.rs  io_elements.rs  mod.rs  models.rs
