[package]
name = "nc-teltonika-server"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
rlimit = "0.10"
axum = "0.7"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
config = "0.14"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
